Add some unit tests.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.2",
   "description": "Helper utility for testing isolated cli modules.",
   "main": "index.js",
+  "scripts": {
+    "test": "node ./test/test.js"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:unkillbob/cli-spy.git"
@@ -16,6 +19,9 @@
     "url": "https://github.com/unkillbob/cli-spy/issues"
   },
   "homepage": "https://github.com/unkillbob/cli-spy",
+  "devDependencies": {
+    "tap": "^0.4.8"
+  },
   "dependencies": {
     "q": "^1.0.0",
     "lodash": "^2.4.1"
