--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "homepage": "https://github.com/unkillbob/cli-spy",
   "devDependencies": {
-    "tap": "^0.4.8"
+    "tap": "~0.4.8"
   },
   "dependencies": {
-    "q": "^1.0.0",
-    "lodash": "^2.4.1"
+    "q": "~1.0.0",
+    "lodash": "~2.4.1"
   }
 }
