--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cli-spy",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Helper utility for testing isolated cli modules.",
   "main": "index.js",
+  "keywords": ["test", "cli", "spy"],
   "scripts": {
     "test": "node ./test/test.js"
   },
